--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Annette Rodriguez Stuff</title>
-    <meta name="description" content="I have to do this for class">
+    <meta name="We have to do a website for my computer science class... here it is I guess..." content="I have to do this for class">
     <meta name="author" content="Annette Rodriguez">
 
     <!-- Enable responsive viewport -->
