--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to this free super simple website. You'll modify my code to make your own portfolio website by the end of class. Put a simple paragraph here introducing yourself.</p>
+    <p> Hello. We have to make a website in our computer science class so here is mine I guess....</p>
 
 <p>Put a list of your projects that you've worked on for this class here.</p>
 
